# NetGuard

./: .gitignore  CMakeLists.txt  ProjectOptions.cmake  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
